--- a/pages/topics/puerto_rico.html
+++ b/pages/topics/puerto_rico.html
@@ -43,9 +43,10 @@
 					</div>
 				</div>
 				<div class="hiddenBody">
-					<input type="checkbox" id="aguadilla-facebook" class="hiddenToggle">
-					<label class="hiddenHead" for="aguadilla-facebook"><h2>Facebook</h2></label>
+					<input type="checkbox" id="news-facebook" class="hiddenToggle">
+					<label class="hiddenHead" for="news-facebook"><h2>Facebook</h2></label>
 					<div class="hiddenBody">
+						<p><a href="https://www.facebook.com/BiancaGraulau/">Bianca Graulau</a> (Journalist)</p>
 						<p><a href="https://www.facebook.com/soyCarey/">Campamento Carey</a> (Organization)</p>
 						<p><a href="https://www.facebook.com/groups/846922903243352/">Campamento Pelicano</a> (Organization)</p>
 						<p><a href="https://www.facebook.com/people/Jos%C3%A9-Luis/100082926514357/">José Luis</a> (Journalist)</p>
@@ -53,26 +54,47 @@
 					</div>
 				</div>
 				<div class="hiddenBody">
-					<input type="checkbox" id="aguadilla-instagram" class="hiddenToggle">
-					<label class="hiddenHead" for="aguadilla-instagram"><h2>Instagram</h2></label>
+					<input type="checkbox" id="news-instagram" class="hiddenToggle">
+					<label class="hiddenHead" for="news-instagram"><h2>Instagram</h2></label>
 					<div class="hiddenBody">
 						<p><a href="https://www.instagram.com/AbayardeRojo/">Abayarde Rojo</a> (Organization)</p>
 						<p><a href="https://www.instagram.com/campamento.cemi.rincon/">Campamento Cemi Rincon</a> (Organization)</p>
 						<p><a href="https://www.instagram.com/campamento_pelicano_aguadilla/">Campamento Pelicano</a> (Organization)</p>
 						<p><a href="https://www.instagram.com/carlosberriospolanco/">Carlos Berrios Polanco</a> (Journalist) He helped make this list!</p>
-						<p><a href="https://www.instagram.com/eliezermolinapr/?hl=en">Eliezer Molinapr</a> (Journalist)</p>
+						<p><a href="https://www.instagram.com/eliezermolinapr/">Eliezer Molinapr</a> (Journalist)</p>
+						<p><a href="https://www.instagram.com/notijuan/">Juan R. Costa</a> (Journalist)</p>
+
 					</div>
 				</div>
 				<div class="hiddenBody">
-					<input type="checkbox" id="aguadilla-twitter" class="hiddenToggle">
-					<label class="hiddenHead" for="aguadilla-twitter"><h2>Twitter</h2></label>
+					<input type="checkbox" id="news-twitter" class="hiddenToggle">
+					<label class="hiddenHead" for="news-twitter"><h2>Twitter</h2></label>
 					<div class="hiddenBody">
 						<p><a href="https://twitter.com/Vaquero2XL">Carlos Berrios Polanco</a> (Journalist) He helped make this list!</p>
-						<p><a href="https://twitter.com/MareaEcologista">León Fiscalizador</a> (Journalist)</p>
+						<p><a href="https://twitter.com/deviIette">DeviIette</a> (Media)</p>
+						<p><a href="https://twitter.com/latinorebels">Latino Rebels</a> (Journal/Media)</p>
+						<p><a href="https://twitter.com/elleonfiscaliz1">León Fiscalizador</a> (Journalist)</p>
 						<p><a href="https://twitter.com/MareaEcologista">Marea Ecologista</a> (Journal/Media)</p>
 						<p><a href="https://twitter.com/MarcosPerezRam">Marcos Perez Ram</a> (Journalist)</p>
+						<p><a href="https://twitter.com/noticel">NotiCel</a> (Journal/Media)</p>
+						<p><a href="https://twitter.com/NotiJuan">Juan R. Costa</a> (Journalist)</p>
 						<p><a href="https://twitter.com/PalabraLibrePR">Palabra Libre</a> (Journal/Media)</p>
-						<p><a href="https://twitter.com/PlanetaKike1">Planeta Kike</a> (Artist)</p>
+					</div>
+				</div>
+				<div class="hiddenBody">
+					<input type="checkbox" id="news-websites" class="hiddenToggle">
+					<label class="hiddenHead" for="news-websites"><h2>Websites</h2></label>
+					<div class="hiddenBody">
+						<p><a href="https://www.latinorebels.com/">Latino Rebels</a> (Journal/Media)</p>
+						<p><a href="https://mareaecologista.com/">Marea Ecologista</a> (Journal/Media)</p>
+						<p><a href="https://www.noticel.com/">NotiCel</a> (Journal/Media)</p>
+					</div>
+				</div>
+				<div class="hiddenBody">
+					<input type="checkbox" id="news-youtube" class="hiddenToggle">
+					<label class="hiddenHead" for="news-youtube"><h2>Youtube</h2></label>
+					<div class="hiddenBody">
+						<p><a href="https://www.youtube.com/c/BiancaGraulau">Bianca Graulau</a> (Journalist)</p>
 					</div>
 				</div>
 			</div>
