Finished with most recent event sources

--- a/pages/topics/puerto_rico.html
+++ b/pages/topics/puerto_rico.html
@@ -40,6 +40,7 @@
 					<input type="checkbox" id="luma-articles" class="hiddenToggle">
 					<label class="hiddenHead" for="luma-articles"><h3>Articles on LUMA</h3></label>
 					<div class="hiddenBody">
+						<p><a href="https://medium.com/@robinson.camacho/los-bolsillos-de-luma-b6be6c8f650e">Los bolsillos de LUMA</a></p>
 					</div>
 				</div>
 				<div class="hiddenBody">
@@ -47,9 +48,12 @@
 					<label class="hiddenHead" for="news-facebook"><h3>Facebook</h3></label>
 					<div class="hiddenBody">
 						<p><a href="https://www.facebook.com/BiancaGraulau/">Abayarde Rojo</a> (Organization)</p>
+						<p><a href="https://www.facebook.com/bonitaradio">Bonita Radio</a> (Journal/Media)</p>
 						<p><a href="https://www.facebook.com/AbayardeRojo.org">Bianca Graulau</a> (Journalist)</p>
 						<p><a href="https://www.facebook.com/soyCarey/">Campamento Carey</a> (Organization)</p>
 						<p><a href="https://www.facebook.com/groups/846922903243352/">Campamento Pelicano</a> (Organization)</p>
+						<p><a href="https://www.facebook.com/eliezermolina2020">Eliezer Molina</a> (Journalist)</p>
+						<p><a href="https://www.facebook.com/elnuevodia">El Nuevo Día</a> (Journalist)</p>
 						<p><a href="https://www.facebook.com/people/Jos%C3%A9-Luis/100082926514357/">José Luis</a> (Journalist)</p>
 						<p><a href="https://www.facebook.com/LatinoRebels/">Latino Rebels</a> (Journal/Media)</p>
 						<p><a href="https://www.facebook.com/power4puertorico/">Power For Puerto Rico</a> (Organization)</p>
@@ -65,9 +69,18 @@
 						<p><a href="https://www.instagram.com/campamento_pelicano_aguadilla/">Campamento Pelicano</a> (Organization)</p>
 						<p><a href="https://www.instagram.com/carlosberriospolanco/">Carlos Berrios Polanco</a> (Journalist) He helped make this list!</p>
 						<p><a href="https://www.instagram.com/eliezermolinapr/">Eliezer Molinapr</a> (Journalist)</p>
+						<p><a href="https://www.instagram.com/elnuevodia/">El Nuevo Día</a> (Journalist)</p>
 						<p><a href="https://www.instagram.com/notijuan/">Juan R. Costa</a> (Journalist)</p>
 						<p><a href="https://www.instagram.com/latinorebels/">Latino Rebels</a> (Journal/Media)</p>
 
+					</div>
+				</div>
+				<div class="hiddenBody">
+					<input type="checkbox" id="news-mastodon" class="hiddenToggle">
+					<label class="hiddenHead" for="news-mastodon"><h2>Mastodon</h2></label>
+					<div class="hiddenBody">
+						<p><a href="https://kolektiva.social/@midnucas">Midnucas</a> (Journal/Media)</p>
+						<p><a href="https://kolektiva.social/@W4Weird">Wired 4 Weird</a> (Journalist)</p>
 					</div>
 				</div>
 				<div class="hiddenBody">
@@ -88,15 +101,23 @@
 					<input type="checkbox" id="news-twitter" class="hiddenToggle">
 					<label class="hiddenHead" for="news-twitter"><h3>Twitter</h3></label>
 					<div class="hiddenBody">
+						<p><a href="https://twitter.com/Bonita_Radio">Bonita Radio</a> (Journal/Media)</p>
 						<p><a href="https://twitter.com/Vaquero2XL">Carlos Berrios Polanco</a> (Journalist) He helped make this list!</p>
-						<p><a href="https://twitter.com/deviIette">DeviIette</a> (Media)</p>
+						<p><a href="https://twitter.com/deviIette">DeviIette</a> (Journal/Media)</p>
+						<p><a href="https://twitter.com/eliezermolinapr">Eliezer Molinapr</a> (Journalist)</p>
+						<p><a href="https://twitter.com/elnuevodia">El Nuevo Día</a> (Journal/Media)</p>
+						<p><a href="https://twitter.com/JoseADelgadoEND">José A. Delgado</a> (Journalist)</p>
 						<p><a href="https://twitter.com/latinorebels">Latino Rebels</a> (Journal/Media)</p>
 						<p><a href="https://twitter.com/elleonfiscaliz1">León Fiscalizador</a> (Journalist)</p>
 						<p><a href="https://twitter.com/MareaEcologista">Marea Ecologista</a> (Journal/Media)</p>
 						<p><a href="https://twitter.com/MarcosPerezRam">Marcos Perez Ram</a> (Journalist)</p>
+						<p><a href="https://twitter.com/midnucas">Midnucas</a> (Journal/Media)</p>
 						<p><a href="https://twitter.com/noticel">NotiCel</a> (Journal/Media)</p>
 						<p><a href="https://twitter.com/NotiJuan">Juan R. Costa</a> (Journalist)</p>
 						<p><a href="https://twitter.com/PalabraLibrePR">Palabra Libre</a> (Journal/Media)</p>
+						<p><a href="https://twitter.com/ElPodcastPPP">Puestos Pa'l Problema</a> (Journal/Media)</p>
+						<p><a href="https://twitter.com/RobiCamacho">Robinson Camacho Rodríguez</a> (Journalist)</p>
+						<p><a href="https://twitter.com/SRCSandra">Sandra Rodríguez Cotto</a> (Journalist)</p>
 					</div>
 				</div>
 				<div class="hiddenBody">
@@ -104,9 +125,14 @@
 					<label class="hiddenHead" for="news-websites"><h3>Websites</h3></label>
 					<div class="hiddenBody">
 						<p><a href="https://abayarderojo.org/">Abayarde Rojo</a> (Organization)</p>
+						<p><a href="https://www.bonitaradio.net/">Bonita Radio</a> (Organization)</p>
+						<p><a href="https://covid-19-puerto-rico.org/2023-02-06/index.html">Covid-19 Puerto Rico</a> (Organization)</p>
+						<p><a href="https://www.elnuevodia.com/">El Nuevo Día</a> (Journal/Media)</p>
+						<p><a href="https://enblancoynegromedia.blogspot.com/">En Blanco y Negro con Sandra</a> (Journal/Media)</p>
 						<p><a href="https://www.latinorebels.com/">Latino Rebels</a> (Journal/Media)</p>
 						<p><a href="https://mareaecologista.com/">Marea Ecologista</a> (Journal/Media)</p>
 						<p><a href="https://www.noticel.com/">NotiCel</a> (Journal/Media)</p>
+						<p><a href="https://medium.com/@robinson.camacho">Robinson Camacho Rodríguez</a> (Journalist)</p>
 					</div>
 				</div>
 				<div class="hiddenBody">
@@ -115,6 +141,7 @@
 					<div class="hiddenBody">
 						<p><a href="https://www.youtube.com/c/BiancaGraulau">Bianca Graulau</a> (Journalist)</p>
 						<p><a href="https://www.youtube.com/@biancagraulaupr">Bianca Graulau Español</a> (Journalist)</p>
+						<p><a href="https://www.youtube.com/c/BonitaRadio">Bonita Radio</a> (Journal/Media)</p>
 						<p><a href="https://www.youtube.com/c/LatinoRebels">Latino Rebels</a> (Journal/Media)</p>
 					</div>
 				</div>
