--- a/pages/topics/puerto_rico.html
+++ b/pages/topics/puerto_rico.html
@@ -26,6 +26,8 @@
 		<div class="container">
 			<p>For the time being, this list shall be a mix of english and spanish. If you have any sources of your own, please suggest them via our contacts at the bottom of the page!</p>
 			<p>We stream protests in Puerto Rico whenever we know of them <a href="https://twitch.tv/redstarbroadcast">here!</a></p>
+			<p></p>
+			<p>A special thanks to Carlos Berrios Polanco for helping make this list. You can follow and support his work <a href="https://linktr.ee/carlosbptm">here</a>.</p>
 			<div class="hidden">
 				<input type="checkbox" id="news" class="hiddenToggle">
 				<label class="hiddenHead" for="news"><h2>News and Ongoing Events</h2></label>
@@ -67,7 +69,7 @@
 						<p><a href="https://www.instagram.com/biancagraulau/">Bianca Graulau</a> (Journalist)</p>
 						<p><a href="https://www.instagram.com/campamento.cemi.rincon/">Campamento Cemi Rincon</a> (Organization)</p>
 						<p><a href="https://www.instagram.com/campamento_pelicano_aguadilla/">Campamento Pelicano</a> (Organization)</p>
-						<p><a href="https://www.instagram.com/carlosberriospolanco/">Carlos Berrios Polanco</a> (Journalist) He helped make this list!</p>
+						<p><a href="https://www.instagram.com/carlosberriospolanco/">Carlos Berrios Polanco</a> (Journalist)</p>
 						<p><a href="https://www.instagram.com/eliezermolinapr/">Eliezer Molinapr</a> (Journalist)</p>
 						<p><a href="https://www.instagram.com/elnuevodia/">El Nuevo Día</a> (Journalist)</p>
 						<p><a href="https://www.instagram.com/notijuan/">Juan R. Costa</a> (Journalist)</p>
@@ -102,7 +104,7 @@
 					<label class="hiddenHead" for="news-twitter"><h3>Twitter</h3></label>
 					<div class="hiddenBody">
 						<p><a href="https://twitter.com/Bonita_Radio">Bonita Radio</a> (Journal/Media)</p>
-						<p><a href="https://twitter.com/Vaquero2XL">Carlos Berrios Polanco</a> (Journalist) He helped make this list!</p>
+						<p><a href="https://twitter.com/Vaquero2XL">Carlos Berrios Polanco</a> (Journalist)</p>
 						<p><a href="https://twitter.com/deviIette">DeviIette</a> (Journal/Media)</p>
 						<p><a href="https://twitter.com/eliezermolinapr">Eliezer Molinapr</a> (Journalist)</p>
 						<p><a href="https://twitter.com/elnuevodia">El Nuevo Día</a> (Journal/Media)</p>
@@ -126,6 +128,7 @@
 					<div class="hiddenBody">
 						<p><a href="https://abayarderojo.org/">Abayarde Rojo</a> (Organization)</p>
 						<p><a href="https://www.bonitaradio.net/">Bonita Radio</a> (Organization)</p>
+						<p><a href="https://carlosberriospolanco.wordpress.com/">Carlos Berríos Polanco</a> (Journalist)</p>
 						<p><a href="https://covid-19-puerto-rico.org/2023-02-06/index.html">Covid-19 Puerto Rico</a> (Organization)</p>
 						<p><a href="https://www.elnuevodia.com/">El Nuevo Día</a> (Journal/Media)</p>
 						<p><a href="https://enblancoynegromedia.blogspot.com/">En Blanco y Negro con Sandra</a> (Journal/Media)</p>
@@ -143,6 +146,28 @@
 						<p><a href="https://www.youtube.com/@biancagraulaupr">Bianca Graulau Español</a> (Journalist)</p>
 						<p><a href="https://www.youtube.com/c/BonitaRadio">Bonita Radio</a> (Journal/Media)</p>
 						<p><a href="https://www.youtube.com/c/LatinoRebels">Latino Rebels</a> (Journal/Media)</p>
+						<p><a href="https://www.youtube.com/channel/UCMtsOwe5ZBl69uMxapbHSqw">Wired for Weird</a> (Journalist)</p>
+					</div>
+				</div>
+			</div>
+			<div class="hidden">
+				<input type="checkbox" id="history" class="hiddenToggle">
+				<label class="hiddenHead" for="history"><h2>Colonialism and Resistance</h2></label>
+				<div class="hiddenBody">
+					<input type="checkbox" id="history-articles" class="hiddenToggle">
+					<label class="hiddenHead" for="history-articles"><h3>Articles</h3></label>
+					<div class="hiddenBody">
+						<p>Nothing so far! Please suggest resources if you have any.</p>
+					</div>
+					<input type="checkbox" id="history-books" class="hiddenToggle">
+					<label class="hiddenHead" for="history-books"><h3>Books</h3></label>
+					<div class="hiddenBody">
+						<p>Nothing so far! Please suggest resources if you have any.</p>
+					</div>
+					<input type="checkbox" id="history-videos" class="hiddenToggle">
+					<label class="hiddenHead" for="history-videos"><h3>Videos</h3></label>
+					<div class="hiddenBody">
+						<p>Nothing so far! Please suggest resources if you have any.</p>
 					</div>
 				</div>
 			</div>
@@ -155,14 +180,24 @@
 					<div class="hiddenBody">
 						<p>Nothing so far! Please suggest resources if you have any.</p>
 					</div>
+					<input type="checkbox" id="diaspora-books" class="hiddenToggle">
+					<label class="hiddenHead" for="diaspora-books"><h3>Books</h3></label>
+					<div class="hiddenBody">
+						<p>Nothing so far! Please suggest resources if you have any.</p>
+					</div>
+					<input type="checkbox" id="diaspora-videos" class="hiddenToggle">
+					<label class="hiddenHead" for="diaspora-videos"><h3>Videos</h3></label>
+					<div class="hiddenBody">
+						<p>Nothing so far! Please suggest resources if you have any.</p>
+					</div>
 				</div>
 			</div>
 			<div class="hidden">
 				<input type="checkbox" id="misc" class="hiddenToggle">
 				<label class="hiddenHead" for="misc"><h2>Misc Resources</h2></label>
 				<div class="hiddenBody">
-					<input type="checkbox" id="misc-articles" class="hiddenToggle">
-					<label class="hiddenHead" for="misc-articles"><h3>Articles</h3></label>
+					<input type="checkbox" id="misc-artists" class="hiddenToggle">
+					<label class="hiddenHead" for="misc-artists"><h3>Artists</h3></label>
 					<div class="hiddenBody">
 						<p>Nothing so far! Please suggest resources if you have any.</p>
 					</div>
