--- a/pages/topics/puerto_rico.html
+++ b/pages/topics/puerto_rico.html
@@ -49,16 +49,26 @@
 					<input type="checkbox" id="news-facebook" class="hiddenToggle">
 					<label class="hiddenHead" for="news-facebook"><h3>Facebook</h3></label>
 					<div class="hiddenBody">
-						<p><a href="https://www.facebook.com/BiancaGraulau/">Abayarde Rojo</a> (Organization)</p>
-						<p><a href="https://www.facebook.com/bonitaradio">Bonita Radio</a> (Journal/Media)</p>
-						<p><a href="https://www.facebook.com/AbayardeRojo.org">Bianca Graulau</a> (Journalist)</p>
-						<p><a href="https://www.facebook.com/soyCarey/">Campamento Carey</a> (Organization)</p>
-						<p><a href="https://www.facebook.com/groups/846922903243352/">Campamento Pelicano</a> (Organization)</p>
-						<p><a href="https://www.facebook.com/eliezermolina2020">Eliezer Molina</a> (Journalist)</p>
-						<p><a href="https://www.facebook.com/elnuevodia">El Nuevo Día</a> (Journalist)</p>
-						<p><a href="https://www.facebook.com/people/Jos%C3%A9-Luis/100082926514357/">José Luis</a> (Journalist)</p>
-						<p><a href="https://www.facebook.com/LatinoRebels/">Latino Rebels</a> (Journal/Media)</p>
-						<p><a href="https://www.facebook.com/power4puertorico/">Power For Puerto Rico</a> (Organization)</p>
+						<p>- <a href="https://www.facebook.com/AbayardeRojo.org">Abayarde Rojo</a></p>
+						<p>Organization | Nationwide | <a href="https://paypal.me/abayarderojo/">Donation Link</a></p>
+						<p>- <a href="https://www.facebook.com/bonitaradio">Bonita Radio</a></p>
+						<p>Media | Nationwide</p>
+						<p>- <a href="https://www.facebook.com/BiancaGraulau/">Bianca Graulau</a></p>
+						<p>Journalist | Nationwide</p>
+						<p>- <a href="https://www.facebook.com/soyCarey/">Campamento Carey</a></p>
+						<p>Organization | Aguadilla</p>
+						<p>- <a href="https://www.facebook.com/groups/846922903243352/">Campamento Pelicano</a></p>
+						<p>Organization | Aguadilla</p>
+						<p>- <a href="https://www.facebook.com/eliezermolina2020">Eliezer Molina</a></p>
+						<p>Journalist | Aguadilla</p>
+						<p>- <a href="https://www.facebook.com/elnuevodia">El Nuevo Día</a></p>
+						<p>Media | Nationwide</p>
+						<p>- <a href="https://www.facebook.com/people/Jos%C3%A9-Luis/100082926514357/">José Luis</a> (Journalist)</p>
+						<p>Journalist | Nationwide</p>
+						<p>- <a href="https://www.facebook.com/LatinoRebels/">Latino Rebels</a></p>
+						<p>Media | International</p>
+						<p>- <a href="https://www.facebook.com/power4puertorico/">Power For Puerto Rico</a></p>
+						<p>Organization | Nationwide</p>
 					</div>
 				</div>
 				<div class="hiddenBody">
@@ -73,7 +83,7 @@
 						<p><a href="https://www.instagram.com/eliezermolinapr/">Eliezer Molinapr</a> (Journalist)</p>
 						<p><a href="https://www.instagram.com/elnuevodia/">El Nuevo Día</a> (Journalist)</p>
 						<p><a href="https://www.instagram.com/notijuan/">Juan R. Costa</a> (Journalist)</p>
-						<p><a href="https://www.instagram.com/latinorebels/">Latino Rebels</a> (Journal/Media)</p>
+						<p><a href="https://www.instagram.com/latinorebels/">Latino Rebels</a> (Media)</p>
 
 					</div>
 				</div>
@@ -81,7 +91,7 @@
 					<input type="checkbox" id="news-mastodon" class="hiddenToggle">
 					<label class="hiddenHead" for="news-mastodon"><h3>Mastodon</h3></label>
 					<div class="hiddenBody">
-						<p><a href="https://kolektiva.social/@midnucas">Midnucas</a> (Journal/Media)</p>
+						<p><a href="https://kolektiva.social/@midnucas">Midnucas</a> (Personality)</p>
 						<p><a href="https://kolektiva.social/@W4Weird">Wired 4 Weird</a> (Journalist)</p>
 					</div>
 				</div>
@@ -96,16 +106,16 @@
 					<input type="checkbox" id="news-tumblr" class="hiddenToggle">
 					<label class="hiddenHead" for="news-tumblr"><h3>Tumblr</h3></label>
 					<div class="hiddenBody">
-						<p><a href="https://latinorebels.tumblr.com/">Latino Rebels</a> (Journal/Media)</p>
+						<p><a href="https://latinorebels.tumblr.com/">Latino Rebels</a> (Media)</p>
 					</div>
 				</div>
 				<div class="hiddenBody">
 					<input type="checkbox" id="news-twitter" class="hiddenToggle">
 					<label class="hiddenHead" for="news-twitter"><h3>Twitter</h3></label>
 					<div class="hiddenBody">
-						<p><a href="https://twitter.com/Bonita_Radio">Bonita Radio</a> (Journal/Media)</p>
+						<p><a href="https://twitter.com/Bonita_Radio">Bonita Radio</a> (Media)</p>
 						<p><a href="https://twitter.com/Vaquero2XL">Carlos Berrios Polanco</a> (Journalist)</p>
-						<p><a href="https://twitter.com/deviIette">DeviIette</a> (Journal/Media)</p>
+						<p><a href="https://twitter.com/deviIette">DeviIette</a> (Personality)</p>
 						<p><a href="https://twitter.com/eliezermolinapr">Eliezer Molinapr</a> (Journalist)</p>
 						<p><a href="https://twitter.com/elnuevodia">El Nuevo Día</a> (Journal/Media)</p>
 						<p><a href="https://twitter.com/JoseADelgadoEND">José A. Delgado</a> (Journalist)</p>
