--- a/pages/topics/puerto_rico.html
+++ b/pages/topics/puerto_rico.html
@@ -75,9 +75,12 @@
 					<input type="checkbox" id="news-instagram" class="hiddenToggle">
 					<label class="hiddenHead" for="news-instagram"><h3>Instagram</h3></label>
 					<div class="hiddenBody">
-						<p><a href="https://www.instagram.com/AbayardeRojo/">Abayarde Rojo</a> (Organization)</p>
-						<p><a href="https://www.instagram.com/biancagraulau/">Bianca Graulau</a> (Journalist)</p>
-						<p><a href="https://www.instagram.com/campamento.cemi.rincon/">Campamento Cemi Rincon</a> (Organization)</p>
+						<p>- <a href="https://www.instagram.com/AbayardeRojo/">Abayarde Rojo</a></p>
+						<p>Organization | Nationwide | <a href="https://paypal.me/abayarderojo/">Donation Link</a></p>
+						<p>- <a href="https://www.instagram.com/biancagraulau/">Bianca Graulau</a></p>
+						<p>Journalist | Nationwide</p>
+						<p>- <a href="https://www.instagram.com/campamento.cemi.rincon/">Campamento Cemi Rincon</a></p>
+						<p>Organization | Aguadilla</p>
 						<p><a href="https://www.instagram.com/campamento_pelicano_aguadilla/">Campamento Pelicano</a> (Organization)</p>
 						<p><a href="https://www.instagram.com/carlosberriospolanco/">Carlos Berrios Polanco</a> (Journalist)</p>
 						<p><a href="https://www.instagram.com/eliezermolinapr/">Eliezer Molinapr</a> (Journalist)</p>
