--- a/pages/topics/puerto_rico.html
+++ b/pages/topics/puerto_rico.html
@@ -50,7 +50,7 @@
 					<label class="hiddenHead" for="news-facebook"><h3>Facebook</h3></label>
 					<div class="hiddenBody">
 						<p>- <a href="https://www.facebook.com/AbayardeRojo.org">Abayarde Rojo</a></p>
-						<p>Organization | Nationwide | <a href="https://paypal.me/abayarderojo/">Donation Link</a></p>
+						<p class="small">Organization | Nationwide | <a href="https://paypal.me/abayarderojo/">Donation Link</a></p>
 						<p>- <a href="https://www.facebook.com/bonitaradio">Bonita Radio</a></p>
 						<p>Media | Nationwide</p>
 						<p>- <a href="https://www.facebook.com/BiancaGraulau/">Bianca Graulau</a></p>
