--- a/pages/topics/puerto_rico.html
+++ b/pages/topics/puerto_rico.html
@@ -26,6 +26,7 @@
 		<div class="container">
 			<p>For the time being, this list shall be a mix of english and spanish. If you have any sources of your own, please suggest them via our contacts at the bottom of the page!</p>
 			<p>We stream protests in Puerto Rico whenever we know of them <a href="https://twitch.tv/redstarbroadcast">here!</a></p>
+			<p>When the news pages are created, the news section here shall be moved there.</p>
 			<p></p>
 			<p>A special thanks to Carlos Berrios Polanco for helping make this list. You can follow and support his work <a href="https://linktr.ee/carlosbptm">here</a>.</p>
 			<div class="hidden">
@@ -81,85 +82,126 @@
 						<p>Journalist | Nationwide</p>
 						<p>- <a href="https://www.instagram.com/campamento.cemi.rincon/">Campamento Cemi Rincon</a></p>
 						<p>Organization | Aguadilla</p>
-						<p><a href="https://www.instagram.com/campamento_pelicano_aguadilla/">Campamento Pelicano</a> (Organization)</p>
-						<p><a href="https://www.instagram.com/carlosberriospolanco/">Carlos Berrios Polanco</a> (Journalist)</p>
-						<p><a href="https://www.instagram.com/eliezermolinapr/">Eliezer Molinapr</a> (Journalist)</p>
-						<p><a href="https://www.instagram.com/elnuevodia/">El Nuevo Día</a> (Journalist)</p>
-						<p><a href="https://www.instagram.com/notijuan/">Juan R. Costa</a> (Journalist)</p>
-						<p><a href="https://www.instagram.com/latinorebels/">Latino Rebels</a> (Media)</p>
-
+						<p>- <a href="https://www.instagram.com/campamento_pelicano_aguadilla/">Campamento Pelicano</a></p>
+						<p>Organization | Aguadilla</p>
+						<p>- <a href="https://www.instagram.com/carlosberriospolanco/">Carlos Berrios Polanco</a></p>
+						<p>Journalist | Nationwide | <a href="https://linktr.ee/carlosbptm">Donation Links</a></p>
+						<p>- <a href="https://www.instagram.com/eliezermolinapr/">Eliezer Molinapr</a></p>
+						<p>Journalist | Aguadilla</p>
+						<p>- <a href="https://www.instagram.com/elnuevodia/">El Nuevo Día</a></p>
+						<p>Media | Nationwide</p>
+						<p>- <a href="https://www.instagram.com/notijuan/">Juan R. Costa</a></p>
+						<p>Journalist | Nationwide</p>
+						<p>- <a href="https://www.instagram.com/latinorebels/">Latino Rebels</a></p>
+						<p>Media | International</p>
 					</div>
 				</div>
 				<div class="hiddenBody">
 					<input type="checkbox" id="news-mastodon" class="hiddenToggle">
 					<label class="hiddenHead" for="news-mastodon"><h3>Mastodon</h3></label>
 					<div class="hiddenBody">
-						<p><a href="https://kolektiva.social/@midnucas">Midnucas</a> (Personality)</p>
-						<p><a href="https://kolektiva.social/@W4Weird">Wired 4 Weird</a> (Journalist)</p>
+						<p>- <a href="https://kolektiva.social/@midnucas">Midnucas</a></p>
+						<>Personality | Nationwide</p>
+						<p>- <a href="https://kolektiva.social/@W4Weird">Wired 4 Weird</a></p>
+						<p>Journalist | Nationwide | <a href="https://linktr.ee/carlosbptm">Donation Link</a></p>
 					</div>
 				</div>
 				<div class="hiddenBody">
 					<input type="checkbox" id="news-tiktok" class="hiddenToggle">
 					<label class="hiddenHead" for="news-tiktok"><h3>TikTok</h3></label>
 					<div class="hiddenBody">
-						<p><a href="https://www.tiktok.com/@biancagraulau">Bianca Graulau</a> (Journalist)</p>
+						<p>- <a href="https://www.tiktok.com/@biancagraulau">Bianca Graulau</a></p>
+						<p>Journalist | Nationwide</p>
 					</div>
 				</div>
 				<div class="hiddenBody">
 					<input type="checkbox" id="news-tumblr" class="hiddenToggle">
 					<label class="hiddenHead" for="news-tumblr"><h3>Tumblr</h3></label>
 					<div class="hiddenBody">
-						<p><a href="https://latinorebels.tumblr.com/">Latino Rebels</a> (Media)</p>
+						<p>- <a href="https://latinorebels.tumblr.com/">Latino Rebels</a></p>
+						<p>Media | International</p>
 					</div>
 				</div>
 				<div class="hiddenBody">
 					<input type="checkbox" id="news-twitter" class="hiddenToggle">
 					<label class="hiddenHead" for="news-twitter"><h3>Twitter</h3></label>
 					<div class="hiddenBody">
-						<p><a href="https://twitter.com/Bonita_Radio">Bonita Radio</a> (Media)</p>
-						<p><a href="https://twitter.com/Vaquero2XL">Carlos Berrios Polanco</a> (Journalist)</p>
-						<p><a href="https://twitter.com/deviIette">DeviIette</a> (Personality)</p>
-						<p><a href="https://twitter.com/eliezermolinapr">Eliezer Molinapr</a> (Journalist)</p>
-						<p><a href="https://twitter.com/elnuevodia">El Nuevo Día</a> (Journal/Media)</p>
-						<p><a href="https://twitter.com/JoseADelgadoEND">José A. Delgado</a> (Journalist)</p>
-						<p><a href="https://twitter.com/latinorebels">Latino Rebels</a> (Journal/Media)</p>
-						<p><a href="https://twitter.com/elleonfiscaliz1">León Fiscalizador</a> (Journalist)</p>
-						<p><a href="https://twitter.com/MareaEcologista">Marea Ecologista</a> (Journal/Media)</p>
-						<p><a href="https://twitter.com/MarcosPerezRam">Marcos Perez Ram</a> (Journalist)</p>
-						<p><a href="https://twitter.com/midnucas">Midnucas</a> (Journal/Media)</p>
-						<p><a href="https://twitter.com/noticel">NotiCel</a> (Journal/Media)</p>
-						<p><a href="https://twitter.com/NotiJuan">Juan R. Costa</a> (Journalist)</p>
-						<p><a href="https://twitter.com/PalabraLibrePR">Palabra Libre</a> (Journal/Media)</p>
-						<p><a href="https://twitter.com/ElPodcastPPP">Puestos Pa'l Problema</a> (Journal/Media)</p>
-						<p><a href="https://twitter.com/RobiCamacho">Robinson Camacho Rodríguez</a> (Journalist)</p>
-						<p><a href="https://twitter.com/SRCSandra">Sandra Rodríguez Cotto</a> (Journalist)</p>
+						<p>- <a href="https://twitter.com/Bonita_Radio">Bonita Radio</a></p>
+						<p>Media | Nationwide</p>
+						<p>- <a href="https://twitter.com/Vaquero2XL">Carlos Berrios Polanco</a></p>
+						<p>Journalist | Nationwide | <a href="https://linktr.ee/carlosbptm">Donation Link</a></p>
+						<p><a href="https://twitter.com/deviIette">DeviIette</a></p>
+						<p>Personality | Nationwide</p>
+						<p>- <a href="https://twitter.com/eliezermolinapr">Eliezer Molinapr</a></p>
+						<p>Journalist | Aguadilla</p>
+						<p>- <a href="https://twitter.com/elnuevodia">El Nuevo Día</a></p>
+						<p>Media | Nationwide</p>
+						<p>- <a href="https://twitter.com/JoseADelgadoEND">José A. Delgado</a></p>
+						<p>Journalist | Nationwide</p>
+						<p>- <a href="https://twitter.com/NotiJuan">Juan R. Costa</a></p>
+						<p>Journalist | Nationwide</p>
+						<p>- <a href="https://twitter.com/latinorebels">Latino Rebels</a></p>
+						<p>Media | International</p>
+						<p>- <a href="https://twitter.com/elleonfiscaliz1">León Fiscalizador</a></p>
+						<p>Journalist | Aguadilla</p>
+						<p>- <a href="https://twitter.com/MareaEcologista">Marea Ecologista</a></p>
+						<p>Media | Nationwide</p>
+						<p>- <a href="https://twitter.com/MarcosPerezRam">Marcos Perez Ram</a></p>
+						<p>Journalist | Nationwide</p>
+						<p>- <a href="https://twitter.com/midnucas">Midnucas</a></p>
+						<p>Personality | Nationwide</p>
+						<p>- <a href="https://twitter.com/noticel">NotiCel</a></p>
+						<p>Media | Nationwide</p>
+						<p>- <a href="https://twitter.com/PalabraLibrePR">Palabra Libre</a></p>
+						<p>Media | Nationwide</p>
+						<p>- <a href="https://twitter.com/ElPodcastPPP">Puestos Pa'l Problema</a></p>
+						<p>Media | Nationwide</p>
+						<p>- <a href="https://twitter.com/RobiCamacho">Robinson Camacho Rodríguez</a></p>
+						<p>Journalist | Nationwide</p>
+						<p>- <a href="https://twitter.com/SRCSandra">Sandra Rodríguez Cotto</a></p>
+						<p>Journalist | Nationwide</p>
 					</div>
 				</div>
 				<div class="hiddenBody">
 					<input type="checkbox" id="news-websites" class="hiddenToggle">
 					<label class="hiddenHead" for="news-websites"><h3>Websites</h3></label>
 					<div class="hiddenBody">
-						<p><a href="https://abayarderojo.org/">Abayarde Rojo</a> (Organization)</p>
-						<p><a href="https://www.bonitaradio.net/">Bonita Radio</a> (Organization)</p>
-						<p><a href="https://carlosberriospolanco.wordpress.com/">Carlos Berríos Polanco</a> (Journalist)</p>
-						<p><a href="https://covid-19-puerto-rico.org/2023-02-06/index.html">Covid-19 Puerto Rico</a> (Organization)</p>
-						<p><a href="https://www.elnuevodia.com/">El Nuevo Día</a> (Journal/Media)</p>
-						<p><a href="https://enblancoynegromedia.blogspot.com/">En Blanco y Negro con Sandra</a> (Journal/Media)</p>
-						<p><a href="https://www.latinorebels.com/">Latino Rebels</a> (Journal/Media)</p>
-						<p><a href="https://mareaecologista.com/">Marea Ecologista</a> (Journal/Media)</p>
-						<p><a href="https://www.noticel.com/">NotiCel</a> (Journal/Media)</p>
-						<p><a href="https://medium.com/@robinson.camacho">Robinson Camacho Rodríguez</a> (Journalist)</p>
+						<p>- <a href="https://abayarderojo.org/">Abayarde Rojo</a> (Organization)</p>
+						<p>Organization | Nationwide | <a href="https://paypal.me/abayarderojo/">Donation Link</a></p>
+						<p>- <a href="https://www.bonitaradio.net/">Bonita Radio</a></p>
+						<p>Media | Nationwide</p>
+						<p>- <a href="https://carlosberriospolanco.wordpress.com/">Carlos Berríos Polanco</a></p>
+						<p>Journalist | Nationwide | <a href="https://linktr.ee/carlosbptm">Donation Link</a></p>
+						<p>- <a href="https://covid-19-puerto-rico.org/2023-02-06/index.html">Covid-19 Puerto Rico</a></p>
+						<p>Media | Nationwide</p>
+						<p>- <a href="https://www.elnuevodia.com/">El Nuevo Día</a></p>
+						<p>Media | Nationwide</p>
+						<p>- <a href="https://enblancoynegromedia.blogspot.com/">En Blanco y Negro con Sandra</a></p>
+						<p>Journalist | Nationwide</p>
+						<p>- <a href="https://www.latinorebels.com/">Latino Rebels</a></p>
+						<p>Media | International</p>
+						<p>- <a href="https://mareaecologista.com/">Marea Ecologista</a></p>
+						<p>Media | Nationwide</p>
+						<p>- <a href="https://www.noticel.com/">NotiCel</a></p>
+						<p>Media | Nationwide</p>
+						<p>- <a href="https://medium.com/@robinson.camacho">Robinson Camacho Rodríguez</a></p>
+						<p>Journalist | Nationwide</p>
 					</div>
 				</div>
 				<div class="hiddenBody">
 					<input type="checkbox" id="news-youtube" class="hiddenToggle">
 					<label class="hiddenHead" for="news-youtube"><h3>Youtube</h3></label>
 					<div class="hiddenBody">
-						<p><a href="https://www.youtube.com/c/BiancaGraulau">Bianca Graulau</a> (Journalist)</p>
-						<p><a href="https://www.youtube.com/@biancagraulaupr">Bianca Graulau Español</a> (Journalist)</p>
-						<p><a href="https://www.youtube.com/c/BonitaRadio">Bonita Radio</a> (Journal/Media)</p>
-						<p><a href="https://www.youtube.com/c/LatinoRebels">Latino Rebels</a> (Journal/Media)</p>
-						<p><a href="https://www.youtube.com/channel/UCMtsOwe5ZBl69uMxapbHSqw">Wired for Weird</a> (Journalist)</p>
+						<p>- <a href="https://www.youtube.com/c/BiancaGraulau">Bianca Graulau</a></p>
+						<p>Journalist | Nationwide</p>
+						<p>- <a href="https://www.youtube.com/@biancagraulaupr">Bianca Graulau Español</a></p>
+						<p>Journalist | Nationwide</p>
+						<p>- <a href="https://www.youtube.com/c/BonitaRadio">Bonita Radio</a></p>
+						<p>Media | Nationwide</p>
+						<p>- <a href="https://www.youtube.com/c/LatinoRebels">Latino Rebels</a></p>
+						<p>Media | International</p>
+						<p>- <a href="https://www.youtube.com/channel/UCMtsOwe5ZBl69uMxapbHSqw">Wired for Weird</a></p>
+						<p>Journalist | Nationwide | <a href="https://linktr.ee/carlosbptm"></a></p>
 					</div>
 				</div>
 			</div>
