--- a/pages/topics/puerto_rico.html
+++ b/pages/topics/puerto_rico.html
@@ -64,7 +64,7 @@
 						<p>Journalist | Aguadilla</p>
 						<p>- <a href="https://www.facebook.com/elnuevodia">El Nuevo Día</a></p>
 						<p>Media | Nationwide</p>
-						<p>- <a href="https://www.facebook.com/people/Jos%C3%A9-Luis/100082926514357/">José Luis</a> (Journalist)</p>
+						<p>- <a href="https://www.facebook.com/people/Jos%C3%A9-Luis/100082926514357/">José Luis</a></p>
 						<p>Journalist | Nationwide</p>
 						<p>- <a href="https://www.facebook.com/LatinoRebels/">Latino Rebels</a></p>
 						<p>Media | International</p>
@@ -101,7 +101,7 @@
 					<label class="hiddenHead" for="news-mastodon"><h3>Mastodon</h3></label>
 					<div class="hiddenBody">
 						<p>- <a href="https://kolektiva.social/@midnucas">Midnucas</a></p>
-						<>Personality | Nationwide</p>
+						<p>Personality | Nationwide</p>
 						<p>- <a href="https://kolektiva.social/@W4Weird">Wired 4 Weird</a></p>
 						<p>Journalist | Nationwide | <a href="https://linktr.ee/carlosbptm">Donation Link</a></p>
 					</div>
